--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -9,7 +9,8 @@
 <ion-content>
   <div class="flex">
     <div class="img-box">
-      <img [src]="image">
+      <img [src]="image"
+        onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/1200px-Circle-icons-profile.svg.png';">
     </div>
   </div>
   <ion-button (click)="ajouterPhoto('galerie')" color="tertiary" expand="block">
@@ -22,15 +23,39 @@
   </ion-button>
   <ion-item>
     <ion-label position="floating">Nom</ion-label>
-    <ion-input [(ngModel)]="client.nom" type="string"></ion-input>
+    <ion-input [(ngModel)]="client.nom" type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Province</ion-label>
-    <ion-input [(ngModel)]='client.province' type="string"></ion-input>
+    <ion-label position="floating">Prénom</ion-label>
+    <ion-input [(ngModel)]='client.prenom' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Pays</ion-label>
-    <ion-input [(ngModel)]='client.pays' type="string"></ion-input>
+    <ion-input [(ngModel)]='client.pays' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Province</ion-label>
+    <ion-input [(ngModel)]='client.province' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Code postal</ion-label>
+    <ion-input [(ngModel)]='client.codePostal' type="number" inputmode="number"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Localité</ion-label>
+    <ion-input [(ngModel)]='client.localite' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Rue</ion-label>
+    <ion-input [(ngModel)]='client.rue' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Numéro</ion-label>
+    <ion-input [(ngModel)]='client.numero' type="number" inputmode="number"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Boite</ion-label>
+    <ion-input [(ngModel)]='client.boite' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-button (click)="ajoutClient(client)" expand="block" color="primary">
     <ion-icon name="checkmark"></ion-icon>Ajouter
