--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,9 +8,9 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+    <ion-tab-button tab="commandes">
+      <ion-icon name="file-tray-full"></ion-icon>
+      <ion-label>Commandes</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="produits">
