Nouvel icone creat pour html commandes

--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -14,7 +14,7 @@
 <ion-content>
   <ion-fab id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
-      <ion-icon name="person-add"></ion-icon>
+      <ion-icon name="create"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-list>
