--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -1,9 +1,21 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>ajouter-commande</ion-title>
+  <ion-toolbar color='primary'>
+    <ion-buttons id='retourclients' slot="start">
+      <ion-back-button defaultHref="/tabs/commandes" text=""></ion-back-button>
+    </ion-buttons>
+    <ion-title id='titre'>Nouvelle commande</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-item>
+    <ion-label position="floating">Numéro de la facture</ion-label>
+    <ion-input [(ngModel)]="commande.numero" type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Nom du client</ion-label>
+    <ion-input [(ngModel)]='commande.nom' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-button (click)="ajoutCommande(commande)" expand="block" color="primary">
+    <ion-icon name="checkmark"></ion-icon>Ajouter
+  </ion-button>
 </ion-content>
