--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -53,6 +53,31 @@
       <ion-label position="floating">Boite</ion-label>
       <ion-textarea formControlName="boiteForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéro de TVA</ion-label>
+      <ion-textarea formControlName="numeroTVAForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéro de téléphone</ion-label>
+      <ion-textarea formControlName="numeroTelephoneForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéro de GSM</ion-label>
+      <ion-textarea formControlName="numeroGSMForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéro de Fax</ion-label>
+      <ion-textarea formControlName="numeroFaxForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">adresse email</ion-label>
+      <ion-textarea formControlName="emailForm" type="email" inputmode="email" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Notes</ion-label>
+      <ion-textarea formControlName="notesForm" type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item></ion-item>
   </form>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button color="danger" (click)="RemoveClient(client)">
