--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -57,6 +57,30 @@
     <ion-label position="floating">Boite</ion-label>
     <ion-input [(ngModel)]='client.boite' type="text" inputmode="text"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label position="floating">Numéro de TVA</ion-label>
+    <ion-input [(ngModel)]='client.numeroTVA' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Numéo de téléphone</ion-label>
+    <ion-input [(ngModel)]='client.numeroTelephone' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Numéo de GSM</ion-label>
+    <ion-input [(ngModel)]='client.numeroGSM' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Numéo de fax</ion-label>
+    <ion-input [(ngModel)]='client.numeroFax' type="text" inputmode="text"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Adresse email</ion-label>
+    <ion-input [(ngModel)]='client.Email' type="email" inputmode="email"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Notes</ion-label>
+    <ion-textarea [(ngModel)]='client.notes' type="text" inputmode="text"></ion-textarea>
+  </ion-item>
   <ion-button (click)="ajoutClient(client)" expand="block" color="primary">
     <ion-icon name="checkmark"></ion-icon>Ajouter
   </ion-button>
