Ajout champs et amélioration des pages commande

--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -75,7 +75,7 @@
   </ion-item>
   <ion-item>
     <ion-label position="floating">Adresse email</ion-label>
-    <ion-input [(ngModel)]='client.Email' type="email" inputmode="email"></ion-input>
+    <ion-input [(ngModel)]='client.email' type="email" inputmode="email"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Notes</ion-label>
