--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourCommandes' slot="start">
-      <ion-back-button text="" ></ion-back-button>
+      <ion-back-button text=""></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -9,13 +9,71 @@
   <form [formGroup]="form" novalidate>
     <ion-item>
       <ion-label position="floating">Numéro</ion-label>
-      <ion-textarea formControlName="numeroForm" type="text" inputmode="text" (change)="numeroChange=true; estChange=true"></ion-textarea>
+      <ion-textarea formControlName="numeroFactureForm" type="text" inputmode="text"
+        (change)="numeroChange=true; estChange=true"></ion-textarea>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nom</ion-label>
-      <ion-textarea formControlName="nomForm" type="text" inputmode="text" (change)="estChange=true">
+      <ion-textarea formControlName="nomClientForm" type="text" inputmode="text" (change)="estChange=true">
       </ion-textarea>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Prénom</ion-label>
+      <ion-textarea formControlName='prenomClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Pays</ion-label>
+      <ion-textarea formControlName='paysClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Province</ion-label>
+      <ion-textarea formControlName='provinceClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Code postal</ion-label>
+      <ion-textarea formControlName='codePostalClientForm' type="number" inputmode="number" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Localité</ion-label>
+      <ion-textarea formControlName='localiteClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Rue</ion-label>
+      <ion-textarea formControlName='rueClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéro</ion-label>
+      <ion-textarea formControlName='numeroClientForm' type="number" inputmode="number" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Boite</ion-label>
+      <ion-textarea formControlName='boiteClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéro de TVA</ion-label>
+      <ion-textarea formControlName='numeroTVAClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéo de téléphone</ion-label>
+      <ion-textarea formControlName='numeroTelephoneClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéo de GSM</ion-label>
+      <ion-textarea formControlName='numeroGSMClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Numéo de fax</ion-label>
+      <ion-textarea formControlName='numeroFaxClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Adresse email</ion-label>
+      <ion-textarea formControlName='emailClientForm' type="email" inputmode="email" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Notes</ion-label>
+      <ion-textarea formControlName='notesForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
+    <ion-item></ion-item>
   </form>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button color="danger" (click)="RemoveCommande(commande)">
