Adaptation code afficher-commande

--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -73,6 +73,10 @@
       <ion-label position="floating">Notes</ion-label>
       <ion-textarea formControlName='notesForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Nom produit</ion-label>
+      <ion-textarea formControlName='nomProduitForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+    </ion-item>
     <ion-item></ion-item>
   </form>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
