--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -71,9 +71,14 @@
     <ion-input [(ngModel)]='client.email' type="email" inputmode="email"></ion-input>
   </ion-item>
   <ion-item (click)="choixProduitModal()">
-    <ion-label position="floating">Nom du produit</ion-label>
-    <ion-input [(ngModel)]='produit.nom' type="text" inputmode="text"></ion-input>
+    <ion-label >Nom du produit</ion-label>
+    <!-- <ion-input [(ngModel)]='produit.nom' type="text" inputmode="text"></ion-input> -->
   </ion-item>
+  <ion-list>
+    <ion-item *ngFor="let produit of produits">
+      <ion-label>{{commandeProduit.nom}}</ion-label>
+    </ion-item>
+  </ion-list>
   <ion-item>
     <ion-label position="floating">Notes</ion-label>
     <ion-textarea [(ngModel)]='commande.notes' type="text" inputmode="text"></ion-textarea>
