--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -75,7 +75,7 @@
     <!-- <ion-input [(ngModel)]='produit.nom' type="text" inputmode="text"></ion-input> -->
   </ion-item>
   <ion-list>
-    <ion-item *ngFor="let produit of produits">
+    <ion-item *ngFor="let commandeProduit of commandesProduits">
       <ion-label>{{commandeProduit.nom}}</ion-label>
     </ion-item>
   </ion-list>
