--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar color='primary'>
     <ion-buttons id='retourProduits' slot="start">
       <ion-back-button text="" ></ion-back-button>
+      <ion-title id='titre'>Produit</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
