--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar color='primary'>
     <ion-buttons id='retourCommandes' slot="start">
       <ion-back-button text=""></ion-back-button>
+      <ion-title id='titre'>Commande</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
