--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -4,12 +4,10 @@
       <ion-back-button defaultHref="/tabs/commandes" text=""></ion-back-button>
     </ion-buttons>
     <ion-title id='titre'>Nouvelle commande</ion-title>
+    
   </ion-toolbar>
 </ion-header>
 <ion-content>
-
-
-
   <ion-item>
     <ion-label position="floating">Numéro de la facture</ion-label>
     <ion-input [(ngModel)]="commande.numeroFacture" type="text" inputmode="text"></ion-input>
@@ -70,32 +68,27 @@
     <ion-label position="floating">Email</ion-label>
     <ion-input [(ngModel)]='client.email' type="email" inputmode="email"></ion-input>
   </ion-item>
-
   <ion-item (click)="choixProduitModal()">
-    <ion-label>Nom du produit</ion-label>
-    <!-- <ion-input [(ngModel)]='produit.nom' type="text" inputmode="text"></ion-input> -->
+    <ion-label color='primary'>Ajouter un produit</ion-label>
   </ion-item>
-  <!--  -->
     <ion-list>
       <ion-item *ngFor="let commandeProduit of commandesProduits">
         <ion-label>{{commandeProduit.nom}}</ion-label>
-      
-        <!-- <form [formGroup]="form" novalidate> -->
       <ion-note>
         <ion-label position="floating">Quantité</ion-label>
         <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number" (change)="quantiteEstChange(commandeProduit)">
         </ion-textarea>
       </ion-note>
-    <!-- </form> -->
       <ion-note slot="end">
         <ion-label position="floating">Prix</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number">
+        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number" (change)="prixEstChange(commandeProduit)">
         </ion-textarea>
       </ion-note>
-    
     </ion-item>
-  <!--  -->
   </ion-list>
+  <ion-item>
+    <ion-label>Total commande : {{total}} €</ion-label>    
+  </ion-item>
   <ion-item>
     <ion-label position="floating">Notes</ion-label>
     <ion-textarea [(ngModel)]='commande.notes' type="text" inputmode="text"></ion-textarea>
@@ -103,5 +96,4 @@
   <ion-button (click)="ajoutCommande(commande)" expand="block" color="primary">
     <ion-icon name="checkmark"></ion-icon>Ajouter
   </ion-button>
-
 </ion-content>
