--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -4,7 +4,6 @@
       <ion-back-button defaultHref="/tabs/commandes" text=""></ion-back-button>
     </ion-buttons>
     <ion-title id='titre'>Nouvelle commande</ion-title>
-    
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -14,7 +13,7 @@
   </ion-item>
   <ion-item (click)="choixClientModal()">
     <ion-label position="floating">Nom du client</ion-label>
-    <ion-input [(ngModel)]='client.nom' type="text" inputmode="text"></ion-input>
+    <ion-input [(ngModel)]='client.nom' type="text" inputmode="text" ></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Prénom du client</ion-label>
@@ -76,12 +75,12 @@
         <ion-label>{{commandeProduit.nom}}</ion-label>
       <ion-note>
         <ion-label position="floating">Quantité</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number" (change)="quantiteEstChange(commandeProduit)">
+        <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
         </ion-textarea>
       </ion-note>
       <ion-note slot="end">
         <ion-label position="floating">Prix</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number" (change)="prixEstChange(commandeProduit)">
+        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
         </ion-textarea>
       </ion-note>
     </ion-item>
