--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -70,8 +70,11 @@
   <ion-item (click)="choixProduitModal()">
     <ion-label color='primary'>Ajouter un produit</ion-label>
   </ion-item>
-    <ion-list>
-      <ion-item *ngFor="let commandeProduit of commandesProduits">
+  
+  <ion-card *ngFor="let commandeProduit of commandesProduits">
+  <ion-item-sliding>
+    
+      <ion-item >
         <ion-label>{{commandeProduit.produitNom}}</ion-label>
       <ion-note>
         <ion-label position="floating">Quantité</ion-label>
@@ -84,7 +87,17 @@
         </ion-textarea>
       </ion-note>
     </ion-item>
-  </ion-list>
+
+    <ion-item-options side="end">
+      <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)" >
+        <ion-icon name="trash" slot="icon-only"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+    
+  </ion-item-sliding>
+</ion-card>
+  
+  
   <ion-item>
     <ion-label>Total commande : {{total}} €</ion-label>    
   </ion-item>
