--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -1,3 +1,4 @@
+<meta charset="utf-8">
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourCommandes' slot="start">
@@ -9,7 +10,7 @@
 <ion-content>
   <form [formGroup]="form" novalidate>
     <ion-item>
-      <ion-label position="floating">Numéro</ion-label>
+      <ion-label position="floating">Numéro de facture</ion-label>
       <ion-textarea formControlName="numeroFactureForm" type="text" inputmode="text"
         (change)="numeroChange=true; estChange=true"></ion-textarea>
     </ion-item>
