--- a/src/app/modals/modal-client/modal-client.page.html
+++ b/src/app/modals/modal-client/modal-client.page.html
@@ -18,7 +18,7 @@
 
   
   <ion-list>
-    <ion-item routerLink="/ajouter-commande" *ngFor="let client of clients" (click)="versVueClient(client)">
+    <ion-item *ngFor="let client of clients" (click)="versVueClient(client)">
       <ion-label>{{client.nom}}</ion-label>
     </ion-item>
   </ion-list>
