--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -99,7 +99,7 @@
       </ion-item>
   
       <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)" >
+        <ion-item-option color="danger" (click)="deleteProduit(commandeProduit,1)" >
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-item-option>
       </ion-item-options>
@@ -125,6 +125,7 @@
         </ion-textarea>
       </ion-note>
     </ion-item>
+    
 
     <ion-item-options side="end">
       <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)" >
@@ -134,7 +135,9 @@
     
   </ion-item-sliding>
 </ion-card>
-  
+<ion-item>
+  <ion-label>Total commande : {{total}} €</ion-label>    
+</ion-item>
     
     
     <ion-item></ion-item>
