--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -99,7 +99,7 @@
       </ion-item>
   
       <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="deleteProduit(commandeProduit,1)" >
+        <ion-item-option color="danger" (click)="deleteProduit(nouveauxArticlesAjoutes,nouvelArticleAjoute,1)" >
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-item-option>
       </ion-item-options>
@@ -128,7 +128,7 @@
     
 
     <ion-item-options side="end">
-      <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)" >
+      <ion-item-option color="danger" (click)="deleteProduit(commandesProduits,commandeProduit,2)" >
         <ion-icon name="trash" slot="icon-only"></ion-icon>
       </ion-item-option>
     </ion-item-options>
