--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -88,12 +88,12 @@
           <ion-label>{{nouvelArticleAjoute.produitNom}}</ion-label>
         <ion-note>
           <ion-label position="floating">Quantité</ion-label>
-          <ion-textarea [(ngModel)]='nouvelArticleAjoute.quantite' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
+          <ion-textarea [(ngModel)]='nouvelArticleAjoute.quantite' type="number" inputmode="number" (change)="quantitePrixEstChange(nouvelArticleAjoute,1)">
           </ion-textarea>
         </ion-note>
         <ion-note slot="end">
           <ion-label position="floating">Prix</ion-label>
-          <ion-textarea [(ngModel)]='nouvelArticleAjoute.prix' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
+          <ion-textarea [(ngModel)]='nouvelArticleAjoute.prix' type="number" inputmode="number" (change)="quantitePrixEstChange(nouvelArticleAjoute,1)">
           </ion-textarea>
         </ion-note>
       </ion-item>
@@ -116,12 +116,12 @@
         <ion-label>{{commandeProduit.produitNom}}</ion-label>
       <ion-note>
         <ion-label position="floating">Quantité</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
+        <ion-textarea [(ngModel)]='commandeProduit.quantite' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit,2)">
         </ion-textarea>
       </ion-note>
       <ion-note slot="end">
         <ion-label position="floating">Prix</ion-label>
-        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit)">
+        <ion-textarea [(ngModel)]='commandeProduit.prix' type="number" inputmode="number" (change)="quantitePrixEstChange(commandeProduit,2)">
         </ion-textarea>
       </ion-note>
     </ion-item>
@@ -135,6 +135,7 @@
     
   </ion-item-sliding>
 </ion-card>
+
 <ion-item>
   <ion-label>Total commande : {{total}} €</ion-label>    
 </ion-item>
