--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -10,13 +10,18 @@
 <ion-content>
   <form [formGroup]="form" novalidate>
     <ion-item>
-      <ion-label position="floating">Numéro de facture</ion-label>
+      <ion-label position="floating">Numéro de commande</ion-label>
       <ion-textarea formControlName="numeroFactureForm" type="text" inputmode="text"
         (change)="numeroChange=true; estChange=true"></ion-textarea>
     </ion-item>
+
+    <ion-item (click)="choixClientModal()">
+      <ion-label color='primary'>Changer de client</ion-label>
+    </ion-item>
+  
     <ion-item>
       <ion-label position="floating" >Nom</ion-label>
-      <ion-textarea (click)="choixClientModal()" formControlName="nomClientForm" type="text" inputmode="text" (change)="estChange=true">
+      <ion-textarea  formControlName="nomClientForm" type="text" inputmode="text" (change)="estChange=true">
       </ion-textarea>
     </ion-item>
     <ion-item>
