Changement numeroFacture en numeroCommande

--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -11,7 +11,7 @@
   <form [formGroup]="form" novalidate>
     <ion-item>
       <ion-label position="floating">Numéro de commande</ion-label>
-      <ion-textarea formControlName="numeroFactureForm" type="text" inputmode="text"
+      <ion-textarea formControlName="numeroCommandeForm" type="text" inputmode="text"
         (change)="numeroChange=true; estChange=true"></ion-textarea>
     </ion-item>
 
