--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Numéro de la facture</ion-label>
-    <ion-input [(ngModel)]="commande.numeroFacture" type="text" inputmode="text"></ion-input>
+    <ion-input [(ngModel)]="commande.numeroCommande" type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item (click)="choixClientModal()">
     <ion-label position="floating">Nom du client</ion-label>
