Révision des différents modeles

--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -20,8 +20,8 @@
       <ion-textarea formControlName="nomForm" type="text" inputmode="text" (change)="nomChange=true; estChange=true"></ion-textarea>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Prénom</ion-label>
-      <ion-textarea formControlName="prenomForm" type="text" inputmode="text" (change)="estChange=true">
+      <ion-label position="floating">Pseudo</ion-label>
+      <ion-textarea formControlName="pseudoForm" type="text" inputmode="text" (change)="estChange=true">
       </ion-textarea>
     </ion-item>
     <ion-item>
