--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -25,8 +25,8 @@
       </ion-textarea>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Prénom</ion-label>
-      <ion-textarea formControlName='prenomClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
+      <ion-label position="floating">Pseudo</ion-label>
+      <ion-textarea formControlName='pseudoClientForm' type="text" inputmode="text" (change)="estChange=true"></ion-textarea>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Pays</ion-label>
