--- a/src/app/ajouter-client/ajouter-client.page.html
+++ b/src/app/ajouter-client/ajouter-client.page.html
@@ -26,8 +26,8 @@
     <ion-input [(ngModel)]="client.nom" type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Prénom</ion-label>
-    <ion-input [(ngModel)]='client.prenom' type="text" inputmode="text"></ion-input>
+    <ion-label position="floating">Pseudo</ion-label>
+    <ion-input [(ngModel)]='client.pseudo' type="text" inputmode="text"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Pays</ion-label>
