--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 <ion-content>
   <div class="disposition" >
-    <img [src]="image" alt=""/>
+    <img [src]="image" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/1200px-Circle-icons-profile.svg.png';" alt=""/>
   </div>
   <ion-button (click)="changerPhoto('galerie')" color="tertiary" expand="block"(click)="imageChange=true; estChange=true">
     <ion-icon name="image" slot="start"></ion-icon>
