--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -134,6 +134,13 @@
 <ion-item>
   <ion-label>Total commande : {{total}} €</ion-label>    
 </ion-item>
+<ion-item>
+  <ion-label>Date de la commande : {{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-label>    
+</ion-item>
+<ion-item>
+  <ion-label>Date de livraison : </ion-label>
+  <ion-datetime [(ngModel)]='commande.dateLivraison' max="2099-12-31" displayFormat="DD MMMM YYYY" placeholder="Choisissez une date de livraison" (change)="estChange=true"></ion-datetime>
+</ion-item>
     <ion-item></ion-item>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button color="danger" (click)="RemoveCommande(commande)">
