--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -152,4 +152,8 @@
       <ion-icon name="save"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+  <ion-button (click)="genererPDF()" expand="block" color="primary">
+    <ion-icon name="checkmark"></ion-icon>PDF
+  </ion-button>
+
 </ion-content>
